source/tests/errors/interpolation_spaces.apex
import os
my_var = 42
os.output("Value: {my var}")